[gd_scene load_steps=10 format=2]

[ext_resource path="res://menus/SaveSlot.gd" type="Script" id=1]
[ext_resource path="res://Btn_sem_sprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://fontes/RobotoMono-SemiBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fontes/upheavtt.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/Menus e Cutscene/JogoSalvo1.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 17
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 17
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 17
font_data = ExtResource( 3 )

[node name="SaveSlot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -844.0
margin_bottom = -389.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 89.9029, 110.392 )
scale = Vector2( 1.55005, 1.65746 )
texture = ExtResource( 5 )

[node name="Info_slot" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -79.0
margin_top = 75.0
margin_right = 79.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 1 )
text = "Fase 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_continuar" parent="." instance=ExtResource( 2 )]
margin_left = 40.4965
margin_top = 113.832
margin_right = 142.496
margin_bottom = 142.832
custom_fonts/font = SubResource( 2 )
text = "Continuar"

[node name="Btn_comecar" parent="." instance=ExtResource( 2 )]
margin_left = 50.2166
margin_top = 141.289
margin_right = 132.217
margin_bottom = 170.289
custom_fonts/font = SubResource( 3 )
text = "Come√ßar"

[node name="Btn_apagar" parent="." instance=ExtResource( 2 )]
margin_left = 55.8456
margin_top = 163.334
margin_right = 127.846
margin_bottom = 192.334
custom_fonts/font = SubResource( 4 )
text = "Apagar"
[connection signal="pressed" from="Btn_continuar" to="." method="_on_Btn_continuar_pressed"]
[connection signal="pressed" from="Btn_comecar" to="." method="_on_Btn_comecar_pressed"]
[connection signal="pressed" from="Btn_apagar" to="." method="_on_Btn_apagar_pressed"]
